tests/files/type_checker_tests/should_pass/364.cmdr
//Should allow recursion
fn a(): float {
	return a();
}
x = a();
