tests/files/type_checker_tests/should_fail/065.cmdr
//Should fail if variable already exists
alias x = ls;
foo = fn (x: int): int {
    return x;
};
